# rag-resume

./: .env  main.py  pyproject.toml  requirements.txt  resume_rag.ipynb
faiss_index/: index.faiss  index.pkl
